--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -4,7 +4,7 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 */
 @import "base/ui-variables";
 
-@gray-base: #ffffff;
+@gray-base: #212121;
 @gray-darker: darken(@gray-base, 13.5%);
 @gray-dark: darken(@gray-base, 20%);
 @gray: darken(@gray-base, 33.5%);
@@ -12,10 +12,10 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @gray-lighter: darken(@gray-base, 92.5%);
 @white: #0a0a0a;
 
-@accent-primary: #58b660;
+@accent-primary: #a227ff;
 @accent-primary-dark: darken(@accent-primary, 10%);
 
-@background-primary: #212121;
+@background-primary: #15141b;
 @background-off-primary: #212121;
 @background-secondary: #121212;
 @background-tertiary: #6d7987;
@@ -25,13 +25,13 @@ https://github.com/Foundry376/Mailspring/blob/master/app/static/style/base/ui-va
 @border-color-tertiary: lighten(@background-tertiary, 10%);
 @border-color-divider: @border-color-secondary;
 
-@text-color: #eee;
+@text-color: #61ffca;
 @text-color-subtle: fadeout(@text-color, 20%);
 @text-color-very-subtle: fadeout(@text-color, 40%);
-@text-color-inverse: white;
+@text-color-inverse: #61ffca;
 @text-color-inverse-subtle: fadeout(@text-color-inverse, 20%);
 @text-color-inverse-very-subtle: fadeout(@text-color-inverse, 50%);
-@text-color-heading: #fff;
+@text-color-heading: #61ffca;
 
 @text-color-link: @accent-primary;
 @text-color-link-hover: @accent-primary-dark;
